@@ -115,13 +115,15 @@ static struct mcu_type_s mcu_types[] =
   {"atmega161",  AVR_ISA_M161,    bfd_mach_avr5},
   {"atmega162",  AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega163",  AVR_ISA_M161,    bfd_mach_avr5},
-  {"atmega164",  AVR_ISA_M323,    bfd_mach_avr5},
+  {"atmega164p", AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega165",  AVR_ISA_M323,    bfd_mach_avr5},
+  {"atmega165p", AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega168",  AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega169",  AVR_ISA_M323,    bfd_mach_avr5},
+  {"atmega169p", AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega32",   AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega323",  AVR_ISA_M323,    bfd_mach_avr5},
-  {"atmega324",  AVR_ISA_M323,    bfd_mach_avr5},
+  {"atmega324p", AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega325",  AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega329",  AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega3250", AVR_ISA_M323,    bfd_mach_avr5},
@@ -130,6 +132,7 @@ static struct mcu_type_s mcu_types[] =
   {"atmega64",   AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega640",  AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega644",  AVR_ISA_M323,    bfd_mach_avr5},
+  {"atmega644p", AVR_ISA_M323,    bfd_mach_avr5},
   {"atmega128",  AVR_ISA_M128,    bfd_mach_avr5},
   {"atmega1280", AVR_ISA_M128,    bfd_mach_avr5},
   {"atmega1281", AVR_ISA_M128,    bfd_mach_avr5},
